--- a/Website/vite-project/src/component/main.css
+++ b/Website/vite-project/src/component/main.css
@@ -1,7 +1,7 @@
-
 .page-container{
     background-color: #567CBD;
 }
+
 .dropdown {
     background-color: #fff;
     border: 1px solid #ccc;
@@ -11,7 +11,6 @@
     font-family: 'Arial', sans-serif;
     cursor: pointer;
 }
-
 
 .header-section {
     display: flex;
@@ -41,7 +40,7 @@
     font-size: 2rem;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition:#567CBD 0.3s;
+    transition: background-color 0.3s;
 }
 
 .speak-button:hover {
@@ -51,7 +50,6 @@
 .instruction-text{
     display: flex;
 }
-
 
 .sound-button {
     float: right;
@@ -67,7 +65,7 @@
     font-size: 2rem;
     cursor: pointer;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-    transition:#567CBD 0.3s;
+    transition: background-color 0.3s;
 }
 
 .sound-button:hover {
@@ -124,3 +122,28 @@
     color: #345a8b;
 }
 
+/* Audio Player */
+audio {
+    width: 100%;
+    margin-top: 20px;
+}
+
+/* Download Button */
+.save-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-size: 1rem;
+    font-family: 'Arial', sans-serif;
+    color: white;
+    background-color: #567CBD;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s;
+}
+
+.save-button:hover {
+    background-color: #345a8b;
+}
